# remote-sensing-change-monitor

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/utils/: processing.py  stac_utils.py  viz.py
ci/: mini_pipeline.py
data/demo/: aoi.geojson
scripts/: mini_pipeline.py
